fix: navbar admin button spacing

--- a/static/common/css/globals_output.css
+++ b/static/common/css/globals_output.css
@@ -2024,6 +2024,9 @@
       }
     }
   }
+  .mx-2 {
+    margin-inline: calc(var(--spacing) * 2);
+  }
   .mx-auto {
     margin-inline: auto;
   }
